--- a/testApp/Base.lproj/Main.storyboard
+++ b/testApp/Base.lproj/Main.storyboard
@@ -1,25 +1,83 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Main View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="AMMainViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bET-S8-NeZ">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="189"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please, enter the number." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.10000000000000001" translatesAutoresizingMaskIntoConstraints="NO" id="f64-vP-OCW">
+                                        <rect key="frame" x="20" y="20" width="280" height="18"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="FOT-It-jMz">
+                                        <rect key="frame" x="20" y="48" width="280" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="COy-3g-4p7"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d03-kp-ERA">
+                                        <rect key="frame" x="20" y="88" width="280" height="81"/>
+                                        <color key="backgroundColor" red="0.35294117650000001" green="0.64313725489999995" blue="0.1215686275" alpha="1" colorSpace="calibratedRGB"/>
+                                        <state key="normal" title="GO">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="FOT-It-jMz" firstAttribute="top" secondItem="f64-vP-OCW" secondAttribute="bottom" constant="10" id="78b-mc-mUv"/>
+                                    <constraint firstItem="FOT-It-jMz" firstAttribute="leading" secondItem="bET-S8-NeZ" secondAttribute="leading" constant="20" id="9gV-uj-Iuq"/>
+                                    <constraint firstAttribute="trailing" secondItem="FOT-It-jMz" secondAttribute="trailing" constant="20" id="DNs-nm-r7v"/>
+                                    <constraint firstAttribute="trailing" secondItem="d03-kp-ERA" secondAttribute="trailing" constant="20" id="L38-iQ-ORO"/>
+                                    <constraint firstItem="d03-kp-ERA" firstAttribute="top" secondItem="FOT-It-jMz" secondAttribute="bottom" constant="10" id="YV6-ip-6Ae"/>
+                                    <constraint firstItem="f64-vP-OCW" firstAttribute="top" secondItem="bET-S8-NeZ" secondAttribute="top" constant="20" id="hBb-8H-svh"/>
+                                    <constraint firstItem="d03-kp-ERA" firstAttribute="leading" secondItem="bET-S8-NeZ" secondAttribute="leading" constant="20" id="hMp-eE-MHo"/>
+                                    <constraint firstAttribute="bottom" secondItem="d03-kp-ERA" secondAttribute="bottom" constant="20" id="pFy-Kk-bDz"/>
+                                    <constraint firstItem="f64-vP-OCW" firstAttribute="leading" secondItem="bET-S8-NeZ" secondAttribute="leading" constant="20" id="pd3-ma-H12"/>
+                                    <constraint firstAttribute="trailing" secondItem="f64-vP-OCW" secondAttribute="trailing" constant="20" id="sGt-d7-Tat"/>
+                                </constraints>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="LYX-eE-vRk">
+                                <rect key="frame" x="0.0" y="189" width="320" height="379"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="LYX-eE-vRk" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="3dB-QE-fg0"/>
+                            <constraint firstItem="bET-S8-NeZ" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="6fW-wX-FNG"/>
+                            <constraint firstAttribute="trailing" secondItem="bET-S8-NeZ" secondAttribute="trailing" id="MSn-CL-lbg"/>
+                            <constraint firstItem="LYX-eE-vRk" firstAttribute="top" secondItem="bET-S8-NeZ" secondAttribute="bottom" id="TND-TV-Chz"/>
+                            <constraint firstAttribute="trailing" secondItem="LYX-eE-vRk" secondAttribute="trailing" id="YCe-rw-xnS"/>
+                            <constraint firstItem="bET-S8-NeZ" firstAttribute="height" secondItem="LYX-eE-vRk" secondAttribute="height" multiplier="1: 2" id="msc-KF-JMj"/>
+                            <constraint firstItem="bET-S8-NeZ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="uBs-N9-y2g"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="LYX-eE-vRk" secondAttribute="bottom" id="zCG-Wp-f8k"/>
+                        </constraints>
                     </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="305" y="399"/>
         </scene>
     </scenes>
 </document>
