--- a/testApp/Base.lproj/Main.storyboard
+++ b/testApp/Base.lproj/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
@@ -17,63 +18,93 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="9d1-g9-nc6">
+                                <rect key="frame" x="20" y="196" width="280" height="352"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bET-S8-NeZ">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="189"/>
+                                <rect key="frame" x="0.0" y="20" width="320" height="176"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please, enter the number." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.10000000000000001" translatesAutoresizingMaskIntoConstraints="NO" id="f64-vP-OCW">
-                                        <rect key="frame" x="20" y="20" width="280" height="18"/>
+                                        <rect key="frame" x="20" y="25" width="280" height="18"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="FOT-It-jMz">
-                                        <rect key="frame" x="20" y="48" width="280" height="30"/>
+                                        <rect key="frame" x="20" y="53" width="280" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="COy-3g-4p7"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d03-kp-ERA">
-                                        <rect key="frame" x="20" y="88" width="280" height="81"/>
+                                        <rect key="frame" x="20" y="93" width="280" height="30"/>
                                         <color key="backgroundColor" red="0.35294117650000001" green="0.64313725489999995" blue="0.1215686275" alpha="1" colorSpace="calibratedRGB"/>
                                         <state key="normal" title="GO">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="self.layer.cornerRadius">
+                                                <integer key="value" value="5"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="goButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="gX6-5k-S1A"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstItem="FOT-It-jMz" firstAttribute="top" secondItem="f64-vP-OCW" secondAttribute="bottom" constant="10" id="78b-mc-mUv"/>
+                                    <constraint firstItem="FOT-It-jMz" firstAttribute="bottom" secondItem="bET-S8-NeZ" secondAttribute="centerY" constant="-5" id="5pa-T2-8lb"/>
                                     <constraint firstItem="FOT-It-jMz" firstAttribute="leading" secondItem="bET-S8-NeZ" secondAttribute="leading" constant="20" id="9gV-uj-Iuq"/>
                                     <constraint firstAttribute="trailing" secondItem="FOT-It-jMz" secondAttribute="trailing" constant="20" id="DNs-nm-r7v"/>
                                     <constraint firstAttribute="trailing" secondItem="d03-kp-ERA" secondAttribute="trailing" constant="20" id="L38-iQ-ORO"/>
-                                    <constraint firstItem="d03-kp-ERA" firstAttribute="top" secondItem="FOT-It-jMz" secondAttribute="bottom" constant="10" id="YV6-ip-6Ae"/>
-                                    <constraint firstItem="f64-vP-OCW" firstAttribute="top" secondItem="bET-S8-NeZ" secondAttribute="top" constant="20" id="hBb-8H-svh"/>
                                     <constraint firstItem="d03-kp-ERA" firstAttribute="leading" secondItem="bET-S8-NeZ" secondAttribute="leading" constant="20" id="hMp-eE-MHo"/>
-                                    <constraint firstAttribute="bottom" secondItem="d03-kp-ERA" secondAttribute="bottom" constant="20" id="pFy-Kk-bDz"/>
+                                    <constraint firstItem="d03-kp-ERA" firstAttribute="top" secondItem="bET-S8-NeZ" secondAttribute="centerY" constant="5" id="mlW-LC-GbQ"/>
                                     <constraint firstItem="f64-vP-OCW" firstAttribute="leading" secondItem="bET-S8-NeZ" secondAttribute="leading" constant="20" id="pd3-ma-H12"/>
                                     <constraint firstAttribute="trailing" secondItem="f64-vP-OCW" secondAttribute="trailing" constant="20" id="sGt-d7-Tat"/>
+                                    <constraint firstItem="FOT-It-jMz" firstAttribute="top" secondItem="f64-vP-OCW" secondAttribute="bottom" constant="10" id="wMY-ax-Cv6"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="LYX-eE-vRk">
-                                <rect key="frame" x="0.0" y="189" width="320" height="379"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            </tableView>
+                            <view hidden="YES" alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hPw-Zm-GPK">
+                                <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                                <subviews>
+                                    <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="YTQ-kd-50H">
+                                        <rect key="frame" x="150" y="264" width="20" height="20"/>
+                                    </activityIndicatorView>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="YTQ-kd-50H" firstAttribute="centerY" secondItem="hPw-Zm-GPK" secondAttribute="centerY" id="fuZ-PT-lhX"/>
+                                    <constraint firstItem="YTQ-kd-50H" firstAttribute="centerX" secondItem="hPw-Zm-GPK" secondAttribute="centerX" id="okF-XB-Jht"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="LYX-eE-vRk" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="3dB-QE-fg0"/>
-                            <constraint firstItem="bET-S8-NeZ" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="6fW-wX-FNG"/>
-                            <constraint firstAttribute="trailing" secondItem="bET-S8-NeZ" secondAttribute="trailing" id="MSn-CL-lbg"/>
-                            <constraint firstItem="LYX-eE-vRk" firstAttribute="top" secondItem="bET-S8-NeZ" secondAttribute="bottom" id="TND-TV-Chz"/>
-                            <constraint firstAttribute="trailing" secondItem="LYX-eE-vRk" secondAttribute="trailing" id="YCe-rw-xnS"/>
-                            <constraint firstItem="bET-S8-NeZ" firstAttribute="height" secondItem="LYX-eE-vRk" secondAttribute="height" multiplier="1: 2" id="msc-KF-JMj"/>
+                            <constraint firstItem="9d1-g9-nc6" firstAttribute="top" secondItem="bET-S8-NeZ" secondAttribute="bottom" id="DMw-b9-Dbc"/>
+                            <constraint firstAttribute="trailing" secondItem="hPw-Zm-GPK" secondAttribute="trailing" id="Lqw-9g-8kL"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="9d1-g9-nc6" secondAttribute="bottom" constant="20" id="Mx0-bX-wVa"/>
+                            <constraint firstAttribute="trailing" secondItem="bET-S8-NeZ" secondAttribute="trailing" id="Mxx-GK-bDZ"/>
+                            <constraint firstItem="hPw-Zm-GPK" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Neg-zO-2nX"/>
+                            <constraint firstAttribute="trailing" secondItem="9d1-g9-nc6" secondAttribute="trailing" constant="20" id="NgU-fj-Eow"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="hPw-Zm-GPK" secondAttribute="bottom" id="ST0-VT-j0p"/>
+                            <constraint firstItem="bET-S8-NeZ" firstAttribute="height" secondItem="9d1-g9-nc6" secondAttribute="height" multiplier="1:2" id="TK1-uj-EGN"/>
+                            <constraint firstItem="bET-S8-NeZ" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="bsc-La-Oyd"/>
+                            <constraint firstItem="hPw-Zm-GPK" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="pKt-2C-1qD"/>
                             <constraint firstItem="bET-S8-NeZ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="uBs-N9-y2g"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="LYX-eE-vRk" secondAttribute="bottom" id="zCG-Wp-f8k"/>
+                            <constraint firstItem="9d1-g9-nc6" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="20" id="wfD-cU-Gys"/>
                         </constraints>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                    <connections>
+                        <outlet property="activityIndicatorView" destination="hPw-Zm-GPK" id="JCL-tO-Slb"/>
+                        <outlet property="limitTextField" destination="FOT-It-jMz" id="Sbt-SH-P01"/>
+                        <outlet property="resultsTextView" destination="9d1-g9-nc6" id="zxZ-Wn-5pB"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
